testsuite/tests/properties/invalid_then/test.out
== default_no_kw.lkt ==
error: the second argument is 'default_val', is optional and must be a keyword argument

== kwarg.lkt ==
error: the first argument must be positional

== lambda_no_arg.lkt ==
lambda_no_arg.lkt:6:38: error: exactly one argument expected for the lambda expression
6 |     fun prop(): Name = node.name.do(() => node)


== no_lambda.lkt ==
error: the first argument must be a lambda expression

== too_many_args.lkt ==
error: at most two arguments expected

== two_args.lkt ==
two_args.lkt:6:38: error: exactly one argument expected for the lambda expression
6 |     fun prop(): Name = node.name.do((x, y) => x.foo(y))
  |                                      ^^^^


lkt_compile: Done
